force-app/main/default/objects/breg_Annual__c/breg_Annual__c.object-meta.xml
<CustomObject>
    <description>Aalta BREG-60</description>
    <label>Annual</label>
    <nameField>
        <displayFormat>Annual-{000000000}</displayFormat>
        <label>Annual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>