force-app/main/default/objects/breg_Annual__c/fields/breg_Account_File__c.field-meta.xml
<CustomField>
    <fullName>breg_Account_File__c</fullName>
    <formula>breg_Account__r.breg_File__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account File #</label>
    <type>Text</type>
</CustomField>