force-app/main/default/objects/breg_Annual__c/fields/breg_BRIM_BATCH_DT__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_BATCH_DT__c</fullName>
    <label>BRIM BATCH DT</label>
    <type>Date</type>
</CustomField>