force-app/main/default/objects/breg_Annual__c/fields/breg_BRIM_BATCH_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_BATCH_ID__c</fullName>
    <description>Legacy BATCH ID</description>
    <label>BRIM BATCH ID</label>
    <type>TextArea</type>
</CustomField>