force-app/main/default/objects/breg_Annual__c/fields/breg_BRIM_BATCH_STATUS__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_BATCH_STATUS__c</fullName>
    <label>BRIM BATCH STATUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>