force-app/main/default/objects/breg_Annual__c/fields/breg_BRIM_STATUS_NEW__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_STATUS_NEW__c</fullName>
    <label>BRIM STATUS NEW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>