force-app/main/default/objects/breg_Annual__c/fields/breg_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-79</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Annuals</relationshipLabel>
    <relationshipName>breg_Annuals</relationshipName>
    <type>Lookup</type>
</CustomField>