force-app/main/default/objects/breg_Annual__c/fields/breg_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Filing_Date__c</fullName>
    <description>Aalta BREG-60, BREG-5127</description>
    <inlineHelpText>The first day of Filing Quarter</inlineHelpText>
    <label>Filing Date</label>
    <type>Date</type>
</CustomField>