force-app/main/default/objects/breg_Annual__c/fields/breg_Filing_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Filing_Due_Date__c</fullName>
    <description>Aalta BREG-5127</description>
    <formula>ADDMONTHS(breg_Filing_Date__c,3) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The last day of Filing Quarter</inlineHelpText>
    <label>Filing Due Date</label>
    <type>Date</type>
</CustomField>