force-app/main/default/objects/breg_Annual__c/fields/breg_No_Changes__c.field-meta.xml
<CustomField>
    <fullName>breg_No_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-84</description>
    <label>No Changes</label>
    <type>Checkbox</type>
</CustomField>