force-app/main/default/objects/breg_Annual__c/fields/breg_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_Received_Date__c</fullName>
    <description>Aalta BREG-60</description>
    <label>Received Date</label>
    <type>DateTime</type>
</CustomField>