force-app/main/default/objects/breg_Annual__c/fields/breg_Received_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>breg_Received_Date_Formula__c</fullName>
    <description>Aalta BREGMO-82</description>
    <formula>DATEVALUE(breg_Received_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>