force-app/main/default/objects/breg_Annual__c/fields/breg_Received_Date_Formula_AM_PM__c.field-meta.xml
<CustomField>
    <fullName>breg_Received_Date_Formula_AM_PM__c</fullName>
    <formula>IF(
ISBLANK(breg_Received_Date__c),
&quot;&quot;,
IF(HOUR(TIMEVALUE(breg_Received_Date__c- (10/24))) &lt; 12, &quot;AM&quot;, &quot;PM&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Date Formula AM/PM</label>
    <type>Text</type>
</CustomField>