force-app/main/default/objects/breg_Annual__c/fields/breg_Received_Date_Formula_Time__c.field-meta.xml
<CustomField>
    <fullName>breg_Received_Date_Formula_Time__c</fullName>
    <formula>IF(
ISBLANK(breg_Received_Date__c),
&quot;&quot;,
IF(MOD(HOUR(TIMEVALUE(breg_Received_Date__c - (10/24))), 12) = 0, &quot;12&quot;, TEXT(MOD(HOUR(TIMEVALUE(breg_Received_Date__c - (10/24))), 12))) + &quot;:&quot; +
IF(MINUTE(TIMEVALUE(breg_Received_Date__c - (10/24))) &lt; 10,
&quot;0&quot; + TEXT(MINUTE(TIMEVALUE(breg_Received_Date__c - (10/24)))),
TEXT(MINUTE(TIMEVALUE(breg_Received_Date__c - (10/24))))
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Date Formula Time</label>
    <type>Text</type>
</CustomField>