force-app/main/default/objects/breg_Annual__c/fields/breg_Received_DateTime_Text_Formula__c.field-meta.xml
<CustomField>
    <fullName>breg_Received_DateTime_Text_Formula__c</fullName>
    <formula>IF(
    ISBLANK(breg_Received_Date__c),
    &quot;&quot;,
    
    TEXT(DAY(DATEVALUE(breg_Received_Date__c))) &amp; &quot; &quot; &amp;

    CASE(
        MONTH(DATEVALUE(breg_Received_Date__c)),
        1, &quot;January&quot;,
        2, &quot;February&quot;,
        3, &quot;March&quot;,
        4, &quot;April&quot;,
        5, &quot;May&quot;,
        6, &quot;June&quot;,
        7, &quot;July&quot;,
        8, &quot;August&quot;,
        9, &quot;September&quot;,
        10, &quot;October&quot;,
        11, &quot;November&quot;,
        12, &quot;December&quot;,
        &quot;&quot;
    ) &amp; &quot; &quot; &amp;

    TEXT(YEAR(DATEVALUE(breg_Received_Date__c))) &amp; &quot; &quot; &amp;

    IF(
        MOD(HOUR(TIMEVALUE(breg_Received_Date__c - (10/24))), 12) = 0,
        &quot;12&quot;,
        TEXT(MOD(HOUR(TIMEVALUE(breg_Received_Date__c - (10/24))), 12))
    ) &amp; &quot;:&quot; &amp;

    IF(
        MINUTE(TIMEVALUE(breg_Received_Date__c - (10/24))) &lt; 10,
        &quot;0&quot; &amp; TEXT(MINUTE(TIMEVALUE(breg_Received_Date__c - (10/24)))),
        TEXT(MINUTE(TIMEVALUE(breg_Received_Date__c - (10/24))))
    ) &amp; &quot; &quot; &amp;

    IF(
        HOUR(TIMEVALUE(breg_Received_Date__c - (10/24))) &lt; 12,
        &quot;AM&quot;,
        &quot;PM&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received DateTime Text Formula</label>
    <type>Text</type>
</CustomField>