force-app/main/default/objects/breg_Annual__c/fields/BREG_Transaction__c.field-meta.xml
<CustomField>
    <fullName>BREG_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>breg_Transaction__c</referenceTo>
    <relationshipLabel>Annuals</relationshipLabel>
    <relationshipName>Annuals</relationshipName>
    <type>Lookup</type>
</CustomField>