force-app/main/default/objects/breg_Annual__c/fields/breg_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>breg_Unique_Key__c</fullName>
    <description>Unique key of the Annual for the Entity. Auto populated during Annual creation</description>
    <label>Unique Key</label>
    <length>23</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>